Fixed the side bar navigation text on smaller devices, Add a blog archive page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,7 +22,6 @@ body a:hover, body a:focus {
 .sidebar { display:block; padding-top: 10%; background-color: #343535; color:#fff; height: 100%;}
 .sidebar a, .sidebar a:focus { color: #fff; }
 .sidebar a:hover { color: #f64929; }
-nav {font-size: 1.5em;}
 .nav {margin-bottom: 20px;}
 
 .sidebar-header {text-align: center; margin-bottom: 20px;}
@@ -50,6 +49,8 @@ footer {padding-top: 15px;}
 /*Social*/
 .share a {padding-right: 10px;}
 
+nav {font-size: 1.2em;}
+
 article.home h1, .content h1,
 article.home h2, .content h2,
 article.home h3, .content h3,
@@ -71,7 +72,6 @@ article.home h6, .content h6 {
 		.sidebar h1 {font-size: 1.4em;}
 		.sidebar h2 {font-size: 1.2em;}
 		.sidebar h3 {font-size: 1.1em;}
-		nav {font-size: 1em;}
 		h1, h2, h3, h4, h5, h6 {margin-top: 10px;}
 }
 
@@ -79,6 +79,9 @@ article.home h6, .content h6 {
 	.sidebar h2 {font-size: 1.8em;}
 }
 
+@@media screen and (min-width: 1000px) {
+	nav {font-size: 1.5em;}
+}
 /* Media Queries for Responsive design*/
 @media screen and (max-width: 767px) {
 	.sidebar {overflow-y: hidden;}
